Fri Oct 23 07:17:11 2015  Eric Wong  <e@80x24.org>

	* test/io/wait/test_io_wait.rb (test_wait_eof): test return value

Fri Oct 23 00:32:02 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/openssl/ossl_ssl.c (ssl_npn_select_cb): explicitly raise error
	  in ext/openssl instead of OpenSSL itself because LibreSSL
	  silently truncate the selected protocol name by casting the length
	  from int to unsigned char. [Bug #11369]
	  Patch by Jeremy Evans <merch-redmine@jeremyevans.net>

Fri Oct 23 00:49:45 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/un.rb (help): change the name of a block parameter to avoid
	  a warning when the command line option -w of ruby is specified.

Fri Oct 23 00:22:20 2015  Josef Simanek  <josef.simanek@gmail.com>

	* string.c (rb_str_tr): [DOC] Escape backslash in String#tr
	  documentation.  [Fix GH-1063]

Fri Oct 23 00:19:04 2015  yui-knk  <spiketeika@gmail.com>

	* array.c (rb_ary_collect): [DOC] Fix space of code example of
	  Array#map.  [Fix GH-1062]

Thu Oct 22 18:52:53 2015  Akinori MUSHA  <knu@iDaemons.org>

	* vm_eval.c (rb_f_loop): When a loop is stopped by a StopIteration
	  exception, return what the enumerator has returned instead of
	  nil. [ruby-core:71133] [Feature #11498]

Thu Oct 22 18:25:10 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap (idle): add a new argument timeout for keep-alive.
	  [ruby-core:63693] [Bug #10031]

Thu Oct 22 15:30:08 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_peephole_optimize): peephole optimization for
	  branchnil jumps.

	* compile.c (iseq_compile_each): generate save navigation operator
	  code.

	* insns.def (branchnil): new opcode to pop the tos and branch if
	  it is nil.

	* parse.y (NEW_QCALL, call_op, parser_yylex): parse token '.?'.
	  [Feature #11537]

Thu Oct 22 13:16:19 2015  Guilherme Reis Campos  <guilhermekbsa@gmail.com>

	* dir.c (ruby_brace_expand): glob brace expansion edge case fix.